--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
-    <string name="app_name">geoFort</string>
+    <string name="app_name">Geofort</string>
+    <string name="hint_geofortTitle">Geofort Title</string>
+    <string name="hint_geofortDescription">Description </string>
+    <string name="button_addGeofort">Add Geofort</string>
+    <string name="button_saveGeofort">Save Geofort</string>
+    <string name="menu_addGeofort">Add</string>
+    <string name="menu_cancelGeofort">Cancel</string>
+    <string name="add_emptyGeofort">Please Enter a title</string>
+    <string name="button_addImage"> Add Image </string>
+    <string name="button_changeImage"> Change Image </string>
+    <string name="select_geofort_image">Select geofort image</string>
+    <string name="imageView">The Geofort Image</string>
+    <string name="button_location">Set Location</string>
+    <string name="change_location">Change Location</string>
+
+    <string name="title_activity_map">Map</string>
 </resources>
