--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="select_geofort_image">Select geofort image</string>
     <string name="imageView">The Geofort Image</string>
     <string name="button_location">Set Location</string>
+    <string name="button_delete">Delete Geofort</string>
+
     <string name="change_location">Change Location</string>
 
     <string name="title_activity_map">Map</string>
