notes displaying need to save them

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="title_icon_back">Back</string>
     <string name="title_icon_logout">Logout</string>
     <string name="title_save">Save</string>
+    <string name="button_addNote"> Add Note </string>
+    <string name="hint_note">Add notes here</string>
 
 
 
