--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,10 @@
     <string name="menu_cancelGeofort">Cancel</string>
     <string name="add_emptyGeofort">Please Enter a title</string>
     <string name="button_addImage"> Add Image </string>
-    <string name="button_changeImage"> Change Image </string>
+    <string name="button_changeImage"> Add More Images </string>
     <string name="select_geofort_image">Select geofort image</string>
     <string name="imageView">The Geofort Image</string>
-    <string name="button_location">Set Location</string>
+    <string name="button_location">Set Location </string>
     <string name="button_delete">Delete Geofort</string>
 
     <string name="change_location">Change Location</string>
