--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="title_activity_map">Map</string>
     <string name="title_activity_login">Login</string>
     <string name="title_activity_register">Register</string>
+    <string name="title_geofort_activity_map">All Forts</string>
+
 
     <string name="title_icon_delete">Delete</string>
     <string name="title_icon_settings">Settings</string>
